--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "engines": {
     "node": "10.x"
   },
+"scripts": {
+   "start": "node app.js"
+    },
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
